--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,17 @@
   
   <div id="page">
 	<div id="content">
+		<li class="account">
+		  <table>
+		    <tr>
+		      <td class="top">Name</td>
+			  <td class="top">Sites</td>
+			  <td class="top">Books</td>
+		      <td class="top">Services</td>
+		    </tr>
     <%= yield %>
+			  </table>
+			</li>
     </div>
   </div>
   
