Styled header and footer to match the rest of the design.
Used this color scheme:

http://www.colourlovers.com/palette/587449/Jokers_pride

--- a/app/views/accounts/_account.html.erb
+++ b/app/views/accounts/_account.html.erb
@@ -17,7 +17,7 @@
           <%= render :partial => 'name', :collection => account.nicks, :locals => { :is_nickname => true } unless account.nicks.empty? %>
         </ul>
       </td>
-      <td>
+      <td class="last">
         <% unless account.sites.empty? %>
           <ul>
             <%= render :partial => 'site', :collection => account.sites %>
