--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,9 @@
 
 <div id="wrapper">
   <div id="header">
-    <h1>Ruby Committers</h1>
+    <div class="container">
+      <h1>Ruby Committers</h1>
+    </div>
   </div>
   
   <div id="page">
@@ -28,7 +30,7 @@
   </div>
 </div>
 
-<%= link_to 'fork me on github', 'http://github.com/tenderlove/rubycommitters.org', :id => 'fork_me' %>
+<%= link_to 'fork us on the githubs', 'http://github.com/tenderlove/rubycommitters.org', :id => 'fork_me' %>
 
 <%= javascript_include_tag 'https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js' %>
 <%= javascript_include_tag :defaults, 'jquery.lettering.min' %>
