--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -1,5 +1,5 @@
 html {
-  background: #ffffff url(/images/bg-white.png) no-repeat scroll 100% 0;
+  background: #992b2b url(/images/bg.jpg) no-repeat fixed 100% 0;
 }
 
 body {
@@ -62,24 +62,34 @@ code {
   margin: 0 auto;
   font-size: 150%;
 }
-#header {
-  background: #ff0000 url('/images/header-background.gif') repeat scroll 0 0;
-  position: relative;
-  padding: 1.2em 1em .75em 1em;
-  margin: .6em 0 0 0;
-  border-bottom: 1px solid #803130;
-  -webkit-border-top-right-radius: 4px;
-  -webkit-border-top-left-radius: 4px;
-  -moz-border-radius-topright: 4px;
-  -moz-border-radius-topleft: 4px;
-  border-top-right-radius: 4px;
-  border-top-left-radius: 4px;
-  color: #fff;
+#header, 
+#header .container {
+  -webkit-border-bottom-right-radius: 4px;
+  -webkit-border-bottom-left-radius: 4px;
+  -moz-border-radius-bottomright: 4px;
+  -moz-border-radius-bottomleft: 4px;
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
 }
-
+#header {
+  position: relative;
+  color: #fff;
+  background: rgba(242, 242, 242, 0.3);
+  padding: 0 1em 1em 1em;
+  -webkit-box-shadow: 2px 1px 2px rgba(40,40,40,0.4);
+     -moz-box-shadow: 2px 1px 2px rgba(40,40,40,0.4);
+          box-shadow: 2px 1px 2px rgba(40,40,40,0.4);
+}
+#header .container {
+  background: #F1F1F1;
+  padding: 1.2em 1em .75em 1em;
+  border: 1px solid #CCC;
+  border-top: 0;
+}
 #header h1 {
   position: relative;
-  font-family: 'Cherry Cream Soda', arial, serif;
+  background: transparent url(/images/ruby.png) no-repeat scroll 0 58%;
+  font-family: 'Cherry Cream Soda', Arial, serif;
   font-size: 600%;
   line-height: 1.25em;
   margin: 0;
@@ -98,7 +108,7 @@ code {
 #page {
   position: relative;
   width: auto;
-  background-color: rgba( 0, 0, 0, 0.1);
+  background: transparent;
   min-height: 100%;
   font-size: 1.25em;
   margin: 0 0 5% 0;
@@ -120,24 +130,38 @@ code {
 #content table {
   width: 100%;
   border-spacing: 0;
+  -webkit-border-bottom-right-radius: 5px;
+   -webkit-border-bottom-left-radius: 5px;
+      -moz-border-radius-bottomright: 5px;
+       -moz-border-radius-bottomleft: 5px;
+          border-bottom-right-radius: 5px;
+           border-bottom-left-radius: 5px;
   -webkit-box-shadow: 2px 1px 2px rgba(40,40,40,0.4);
      -moz-box-shadow: 2px 1px 2px rgba(40,40,40,0.4);
           box-shadow: 2px 1px 2px rgba(40,40,40,0.4);
 }
 #content table td {
   vertical-align: top;
-  border-bottom: 1px solid #AAA;
-  background-color: rgba(80,80,80,0.1);
+  border-top: 1px solid #AAA;
+  background-color: rgba(255,255,255,0.82);
 }
 #content table td.first { 
   width: 37%;
+  -webkit-border-bottom-left-radius: 5px;
+      -moz-border-radius-bottomleft: 5px;
+          border-bottom-left-radius: 5px;
+}
+#content table td.last {
+  -webkit-border-bottom-right-radius: 5px;
+      -moz-border-radius-bottomright: 5px;
+          border-bottom-right-radius: 5px;
 }
 
 #content table tr.last td {
   border-bottom: none;
 }
 #content li.account {
-  margin: 0 10em 6em 10em;
+  margin: 0 10em 7em 10em;
 }
 .account .container {
   position: relative;
@@ -198,12 +222,14 @@ code {
 
 /* I'd love to fork you ;) */
 #fork_me {
+  display: block;
   position: absolute;
   top: -1px;
   right: 14%;
-  background: #F1F1F1 url(/images/octocat_tiny.png) no-repeat scroll 2% 50%;
+  background: #5B6966 url(/images/octocat_tiny.png) no-repeat scroll 2% 50%;
   padding: 14px 10px 4px 40px;
-  border: 1px solid #333;
+  border: 1px solid #222;
+  color: #81B3A8;
   -webkit-border-bottom-right-radius: 5px;
    -webkit-border-bottom-left-radius: 5px;
       -moz-border-radius-bottomright: 5px;
@@ -213,4 +239,21 @@ code {
   -webkit-box-shadow: 2px 1px 3px #333;
      -moz-box-shadow: 2px 1px 3px #333;
           box-shadow: 2px 1px 3px #333;
+  z-index: 1000;
+}
+#fork_me:hover {
+  padding-top: 18px;
+}
+
+
+#footer {
+  margin-bottom: 7px;
+  text-align: center;
+  line-height: 1em;
+  text-shadow: 1px 1px 1px #333;
+}
+#footer a {
+  color: #B38181;
+  font-size: 135%;
+  line-height: 1.5em;
 }
