--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -1,5 +1,7 @@
-<h1>Ruby Committers</h1>
-<%= link_to 'fork me on github', 'http://github.com/tenderlove/rubycommitters.org' %>
-<ul>
+<!-- <h1>Ruby Committers</h1>
+<%= link_to 'fork me on github',
+    'http://github.com/tenderlove/rubycommitters.org' %> -->
+
+<ul style="list-style: none; margin: 0; padding: 0; z-index: 10; position: relative;">
 <%= render :partial => 'account', :collection => @accounts %>
 </ul>
