--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,10 @@
 </head>
 <body>
 
+  <div id="header">
+    <img src="/images/header.jpg" alt="Ruby Committers" />
+  </div>
+
 <%= yield %>
 
 </body>
