--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 <body>
 
   <div id="header">
-    <img src="/images/header.jpg" alt="Ruby Committers" />
+    <img src="/images/header2.jpg" alt="Ruby Committers" />
   </div>
 
 <%= yield %>
