--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,6 +8,7 @@ html
     == javascript_include_tag :jquery, :'jquery.nivo.slider.pack', :application
 
   body
+    #ribbon== link_to 'Fork me on GitHub', 'https://github.com/fredwu/rubycommitters.org'
     #wrapper
       #header-wrapper
         #inner-wrapper
