--- a/app/stylesheets/base.sass
+++ b/app/stylesheets/base.sass
@@ -155,7 +155,7 @@ body
               width: 180px
               white-space: nowrap
               overflow: hidden
-              line-height: 14px
+              line-height: 17px
               li
                 font-size: 13px
                 padding-top: 5px
@@ -197,7 +197,7 @@ body
               color: #fff
               font-family: "Helvetica Neue", Helvetica
               font-size: 9px
-              text-decoration: none
+              border: none
           li.eng
             top: 5px
             a
