Missed another style glitch.

--- a/app/stylesheets/base.sass
+++ b/app/stylesheets/base.sass
@@ -262,6 +262,7 @@ body
     text-indent: -9999px
     margin-right: -5px
     background: url("/images/bullet.png") no-repeat
+    border: none
     cursor: pointer
     &.active
       background-position: 0 -20px
