Keep the colour of the fork badge consistent with the rest of the styles.

--- a/app/stylesheets/base.sass
+++ b/app/stylesheets/base.sass
@@ -272,7 +272,7 @@ body
  *------------------------------
 
 #ribbon
-  background-color: #a00
+  background-color: $primary-colour
   overflow: hidden
   position: fixed
   left: -3em
