--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -302,7 +302,7 @@ body {
  *  Fork me on Github :-)
  *------------------------------ */
 #ribbon {
-  background-color: #aa0000;
+  background-color: #b01000;
   overflow: hidden;
   position: fixed;
   left: -3em;
